{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 461,
  "lineage": "3c494152-7ce7-8180-4d88-651720140f7b",
  "resources": [
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "kiwi-dev-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/acf552875106d8f0",
            "arn_suffix": "app/kiwi-dev-alb/acf552875106d8f0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "kiwi-dev-alb-525531719.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/acf552875106d8f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kiwi-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-068e678da8924b95a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b2517a4a519178a5"
              },
              {
                "subnet_id": "subnet-0e0bf15aa8c469ede"
              }
            ],
            "subnets": [
              "subnet-0b2517a4a519178a5",
              "subnet-0e0bf15aa8c469ede"
            ],
            "tags": {
              "Name": "kiwi-dev-alb"
            },
            "tags_all": {
              "Name": "kiwi-dev-alb"
            },
            "vpc_id": "vpc-0e4a010d21e34fff8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kiwi-dev-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/acf552875106d8f0/d2be8dbdb2fe632a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/acf552875106d8f0/d2be8dbdb2fe632a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/acf552875106d8f0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.kiwi-dev-alb",
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kiwi-dev-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "arn_suffix": "targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kiwi-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kiwi-dev-tg-a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303-20230412035153270800000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "target_id": "i-027679d3b334d3202"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "kiwi-dev-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/acf552875106d8f0",
            "arn_suffix": "app/kiwi-dev-alb/acf552875106d8f0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "kiwi-dev-alb-525531719.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/acf552875106d8f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kiwi-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-068e678da8924b95a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b2517a4a519178a5"
              },
              {
                "subnet_id": "subnet-0e0bf15aa8c469ede"
              }
            ],
            "subnets": [
              "subnet-0b2517a4a519178a5",
              "subnet-0e0bf15aa8c469ede"
            ],
            "tags": {
              "Name": "kiwi-dev-alb"
            },
            "tags_all": {
              "Name": "kiwi-dev-alb"
            },
            "vpc_id": "vpc-0e4a010d21e34fff8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kiwi-dev-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/acf552875106d8f0/d2be8dbdb2fe632a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/acf552875106d8f0/d2be8dbdb2fe632a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/acf552875106d8f0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.kiwi-dev-alb",
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kiwi-dev-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "arn_suffix": "targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kiwi-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kiwi-dev-tg-a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303-20230412035153336500000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/d9cb00cefc109303",
            "target_id": "i-062b70e96307082d8"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-027679d3b334d3202",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027679d3b334d3202",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a93ac89ea025d136",
            "private_dns": "ip-10-0-1-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-54-210-232-238.compute-1.amazonaws.com",
            "public_ip": "54.210.232.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f748421aad497d7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0bf15aa8c469ede",
            "tags": {
              "Name": "kiwi-app0"
            },
            "tags_all": {
              "Name": "kiwi-app0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bde1a888957aa7cf"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-062b70e96307082d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062b70e96307082d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00402c38144faea50",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-44-211-147-240.compute-1.amazonaws.com",
            "public_ip": "44.211.147.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-097ea951247370c56",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0bf15aa8c469ede",
            "tags": {
              "Name": "kiwi-app1"
            },
            "tags_all": {
              "Name": "kiwi-app1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bde1a888957aa7cf"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-05e0fc5a45a774d55",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e0fc5a45a774d55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056af1657222e7451",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09943833b717ff425",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0bf15aa8c469ede",
            "tags": {
              "Name": "kiwi-cache"
            },
            "tags_all": {
              "Name": "kiwi-cache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097647bf5d8377607"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_security_group.backend-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "memq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-0eb46a8a9ed954cb7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb46a8a9ed954cb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076421e00b4c212d6",
            "private_dns": "ip-10-0-1-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04cbf8eee5d2eef0a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0bf15aa8c469ede",
            "tags": {
              "Name": "kiwi-memq"
            },
            "tags_all": {
              "Name": "kiwi-memq"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097647bf5d8377607"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_security_group.backend-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-0152c8f0f0146c925",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0152c8f0f0146c925",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-022f74330fe5913bf",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e9f3f54350a4f73",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0bf15aa8c469ede",
            "tags": {
              "Name": "kiwi-sql"
            },
            "tags_all": {
              "Name": "kiwi-sql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097647bf5d8377607"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_security_group.backend-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kiwi-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:internet-gateway/igw-0bde66ecc71c9465d",
            "id": "igw-0bde66ecc71c9465d",
            "owner_id": "382303303503",
            "tags": {
              "Name": "kiwi-igw"
            },
            "tags_all": {
              "Name": "kiwi-igw"
            },
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:route-table/rtb-07009f3fcb9290f7e",
            "id": "rtb-07009f3fcb9290f7e",
            "owner_id": "382303303503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bde66ecc71c9465d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kiwi-route1"
            },
            "tags_all": {
              "Name": "kiwi-route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:route-table/rtb-044a4b3bb0bac48b7",
            "id": "rtb-044a4b3bb0bac48b7",
            "owner_id": "382303303503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bde66ecc71c9465d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kiwi-route2"
            },
            "tags_all": {
              "Name": "kiwi-route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b1cd224ee50af16",
            "route_table_id": "rtb-07009f3fcb9290f7e",
            "subnet_id": "subnet-0e0bf15aa8c469ede"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_route_table.route1",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a60d342719f2fbeb",
            "route_table_id": "rtb-044a4b3bb0bac48b7",
            "subnet_id": "subnet-0b2517a4a519178a5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_route_table.route2",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:security-group/sg-068e678da8924b95a",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068e678da8924b95a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "382303303503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiwi-alb-sg"
            },
            "tags_all": {
              "Name": "kiwi-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:security-group/sg-0bde1a888957aa7cf",
            "description": "Allow app traffic from alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bde1a888957aa7cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068e678da8924b95a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230412035039369000000002",
            "name_prefix": "terraform-",
            "owner_id": "382303303503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiwi-app-sg"
            },
            "tags_all": {
              "Name": "kiwi-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:security-group/sg-097647bf5d8377607",
            "description": "Allow backend traffic from app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097647bf5d8377607",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bde1a888957aa7cf"
                ],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bde1a888957aa7cf"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bde1a888957aa7cf"
                ],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "382303303503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiwi-backend-sg"
            },
            "tags_all": {
              "Name": "kiwi-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:subnet/subnet-0e0bf15aa8c469ede",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0bf15aa8c469ede",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382303303503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kiwi-sn1"
            },
            "tags_all": {
              "Name": "kiwi-sn1"
            },
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:subnet/subnet-0b2517a4a519178a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2517a4a519178a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382303303503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kiwi-sn2"
            },
            "tags_all": {
              "Name": "kiwi-sn2"
            },
            "vpc_id": "vpc-0e4a010d21e34fff8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kiwi-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:vpc/vpc-0e4a010d21e34fff8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f764b128f3f5aba4",
            "default_route_table_id": "rtb-083e0e96b302895c1",
            "default_security_group_id": "sg-0db6579019dcf5152",
            "dhcp_options_id": "dopt-047ffc8ec8d765a7c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4a010d21e34fff8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083e0e96b302895c1",
            "owner_id": "382303303503",
            "tags": {
              "Name": "kiwi-vpc",
              "Project": "kiwi"
            },
            "tags_all": {
              "Name": "kiwi-vpc",
              "Project": "kiwi"
            }
          }
        }
      ]
    }
  ]
}